add logo in tab-bar

--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <meta charset="UTF-8">
-            <title>Nom Du Photographe</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
-            <meta name="description" content="Photographer Portfolio">
-            <link rel="reset.css" href="reset.css">
-            <link rel="style.css" href="style.css">
-    </head>
-    <body>
-        <header>
 
-        </header>
-        <nav>
+<head>
+    <meta charset="UTF-8">
+    <title>Jean Louis Seize</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
+    <meta name="description" content="Photographer Portfolio">
+    <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/259/camera_1f4f7.png">
+    <link rel="reset.css" href="reset.css">
+    <link rel="style.css" href="style.css">
+</head>
 
-        </nav>
-        <main>
-            
-        </main>
-        <footer>
+<body>
+    <header>
 
-        </footer>
-    </body>
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
