--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <html lang="en">
     <head>
             <meta charset="UTF-8">
-            <title>Nom Du Photographe</title>
+            <title>Jean-Louis SEIZE</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
             <meta name="description" content="Photographer Portfolio">
-            <link rel="reset.css" href="reset.css">
-            <link rel="style.css" href="style.css">
+            <link rel="stylesheet" href="reset.css">
+            <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
+            <div class="logo">
+               <img src="public/jlsLogo.png" alt="Jean Louis Seize Logo"> 
+            </div> 
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Portfolio</li>
+                    <li>Contact</li>
+                </ul>
 
+            </nav>         
         </header>
-        <nav>
-
-        </nav>
+        
         <main>
             
         </main>
