--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
     <meta name="description" content="Photographer Portfolio">
     <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/259/camera_1f4f7.png">
-    <link rel="reset.css" href="reset.css">
-    <link rel="style.css" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
