add logo in tab-bar

--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <meta charset="UTF-8">
-            <title>Jean-Louis SEIZE</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
-            <meta name="description" content="Photographer Portfolio">
-            <link rel="stylesheet" href="reset.css">
-            <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-               <img src="public/jlsLogo.png" alt="Jean Louis Seize Logo"> 
-            </div> 
-            <nav>
-                <ul>
-                    <li>About</li>
-                    <li>Portfolio</li>
-                    <li>Contact</li>
-                </ul>
 
-            </nav>         
-        </header>
-        
-        <main>
-            
-        </main>
-        <footer>
+<head>
+    <meta charset="UTF-8">
+    <title>Jean-Louis SEIZE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
+    <meta name="description" content="Photographer Portfolio">
+    <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/259/camera_1f4f7.png">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        </footer>
-    </body>
+<body>
+    <header>
+        <div class="logo">
+            <img src="public/jlsLogo.png" alt="Jean Louis Seize Logo">
+        </div>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>Contact</li>
+            </ul>
+
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
