--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
     <meta name="description" content="Photographer Portfolio">
     <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/259/camera_1f4f7.png">
+    <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,9 +20,9 @@
         </div>
         <nav>
             <ul>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portofolio">portfolio</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
 
         </nav>
