add new branch home

--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-            <meta charset="UTF-8">
-            <title>Nom Du Photographe</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
-            <meta name="description" content="Photographer Portfolio">
-            <link rel="stylesheet" href="reset.css">
-            <link rel="stylesheet" href="style.css">
-            <link rel="stylesheet" href="footer.css">
-    </head>
-    <body>
-        <header>
 
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <title>Jean-Louis SEIZE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
+    <meta name="description" content="Photographer Portfolio">
+    <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/twitter/259/camera_1f4f7.png">
+    <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <img src="public/jlsLogo.png" alt="Jean Louis Seize Logo">
+        </div>
         <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portofolio">portfolio</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
 
         </nav>
-        <main>
-            
-        </main>
+    </header>
 
-        <footer>
-            <div class = "iconcontainer">
-              <a href="https://www.facebook.com/" title="" id=""  target="">
-                <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook"/>
-              </a>
-              <a href="https://www.instagram.com/" title="" id=""  target="">
-                <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram"/>
-              </a>
-              <a href="https://twitter.com/" title="" id="" target="">
-                <img src="iconesfooter/pngwing.com-3.png" class="icons"  alt="twitter"/>
-              </a>
-            </div>
-         
-        </footer>
+    <main>
 
-    </body>
+    </main>
+
+    <footer>
+        <div class="iconcontainer">
+            <a href="https://www.facebook.com/" title="" id="" target="">
+                <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook" />
+            </a>
+            <a href="https://www.instagram.com/" title="" id="" target="">
+                <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram" />
+            </a>
+            <a href="https://twitter.com/" title="" id="" target="">
+                <img src="iconesfooter/pngwing.com-3.png" class="icons" alt="twitter" />
+            </a>
+        </div>
+
+    </footer>
+
+</body>
+
 </html>
