--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
- 
+ <img src="./photos/camera_picture.jpg" class="bg-contact" alt="picture"/>
     <footer>
         <div class = "iconcontainer">
           <a href="https://www.facebook.com/" title="" id=""  target="">
