--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
 <body>
     <header>
         <div class="logo">
-            <img src="public/jlsLogo.png" alt="Jean-Louis Seize Logo">
+            <a href="index.html"><img src="public/jlsLogo.png" alt="Jean-Louis Seize Logo"></a>
         </div>
         <nav>
             <ul>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a id="LinkPortfolio" href="portfolio.html">Portfolio</a></li>
+                <li><a id="LinkAbout" href="about.html">About</a></li>
+                <li><a id="LinkContact" href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
