--- a/about.html
+++ b/about.html
@@ -30,9 +30,33 @@
         </nav>
     </header>
 
-    <main>
 
+
+
+
+    <main id=aboutMain>
+        <div class=aboutDiv>
+            <img src="public/city-4991094_1920.jpg" alt="photo 1" height="500px" width="500px">
+        </div>
+        <div class=aboutDiv>
+            <p id=aboutP>Cum autem commodis intervallata temporibus convivia longa et noxia coeperint apparari vel distributio deliberatione tractatur an exceptis his quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene consilio id placuerit
+                fieri, is adhibetur qui pro domibus excubat aurigarum quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene
+            </p>
+        </div>
+        <div class=aboutDiv>
+            <img src="public/city-4991094_1920.jpg" alt="photo 2" height="500px" width="500px" />
+        </div>
+        <div class=aboutDiv>
+            <img src="public/city-4991094_1920.jpg" alt="photo 3" height="500px" width="500px" />
+        </div>
+        <div class=aboutDiv>
+            <img src="public/city-4991094_1920.jpg" alt="photo 4" height="500px" width="500px" />
+        </div>
     </main>
+
+
+
+
 
     <footer>
         <div class="iconcontainer">
