ajout d'une galerie avec grid et fixé le footer en bas de l'ecran

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
             <meta charset="UTF-8">
-            <title>Nom Du Photographe</title>
+            <title>JEAN-LOUIS SEIZE</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
             <meta name="description" content="Photographer Portfolio">
