add picture and zone text about page

--- a/about.html
+++ b/about.html
@@ -34,23 +34,17 @@
 
 
 
-    <main id=aboutMain>
-        <div class=aboutDiv>
-            <img src="public/city-4991094_1920.jpg" alt="photo 1" height="500px" width="500px">
+    <main class="aboutMain">
+        <div class="aboutDiv">
+            <img src="public/city-865292_1920.jpg" id="portrait" alt="photo of Jean-Louis Seize" />
+            <div class="texte">
+                <p id="pres">texte à ajouer ici</p>
+            </div>
         </div>
-        <div class=aboutDiv>
-            <p id=aboutP>Cum autem commodis intervallata temporibus convivia longa et noxia coeperint apparari vel distributio deliberatione tractatur an exceptis his quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene consilio id placuerit
-                fieri, is adhibetur qui pro domibus excubat aurigarum quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene
-            </p>
-        </div>
-        <div class=aboutDiv>
-            <img src="public/city-4991094_1920.jpg" alt="photo 2" height="500px" width="500px" />
-        </div>
-        <div class=aboutDiv>
-            <img src="public/city-4991094_1920.jpg" alt="photo 3" height="500px" width="500px" />
-        </div>
-        <div class=aboutDiv>
-            <img src="public/city-4991094_1920.jpg" alt="photo 4" height="500px" width="500px" />
+        <div class="aboutDiv">
+            <img src="public/building-1089861_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
+            <img src="public/skyscraper-3122210_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
+            <img src="public/architecture-1914309_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
         </div>
     </main>
 
