--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nom Du Photographe</title>
+    <title>Jean Louis Seize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
     <meta name="description" content="Photographer Portfolio">
