try with flexbox

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jean-Louis Seize - About</title>
+    <title>Jean-Louis Seize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Amélie Sarah Gaëtan & Jérémy">
     <meta name="description" content="Photographer Portfolio">
@@ -38,7 +38,7 @@
         <div class="aboutDiv">
             <img src="public/city-865292_1920.jpg" id="portrait" alt="photo of Jean-Louis Seize" />
             <div class="texte">
-                <p id="pres">texte à ajouer ici</p>
+                <p id="pres">deliberatione tractatur an exceptis his quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene consilio id placuerit fieri, is adhibetur qui pro domibus excubat aurigarum</p>
             </div>
         </div>
         <div class="aboutDiv">
