modif about organize picture whith display grid, add portrait.jpg

--- a/about.html
+++ b/about.html
@@ -35,17 +35,16 @@
 
 
 
-    <main class="aboutMain">
-        <div class="aboutDiv">
-            <img src="public/city-865292_1920.jpg" id="portrait" alt="photo of Jean-Louis Seize" />
-            <div class="texte">
-                <p id="pres">deliberatione tractatur an exceptis his quibus vicissitudo debetur, peregrinum invitari conveniet, et si digesto plene consilio id placuerit fieri, is adhibetur qui pro domibus excubat aurigarum</p>
+    <main>
+        <div class="bloc-container">
+            <div><img src="public/portrait-p.jpg" alt="photo de ..." /></div>
+            <div>
+                <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
+                    Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
             </div>
-        </div>
-        <div class="aboutDiv">
-            <img src="public/building-1089861_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
-            <img src="public/skyscraper-3122210_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
-            <img src="public/architecture-1914309_1920.jpg" class="aboutpict" alt="photo of Jean-Louis Seize" />
+            <div><img src="public/architecture-1359707_1920.jpg" alt="photo de ..." /></div>
+            <div><img src="public/architecture-2083687_1920.jpg" alt="photo de ..." /></div>
+            <div><img src="public/architecture-1048092_1920.jpg" alt="photo de ..." /></div>
         </div>
     </main>
 
