--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     <main>
         <div class="bloc-container">
-            <div><img src="public/portrait-p.jpg" alt="photo de ..." /></div>
+            <div><img src="public/portrait-pp.jpg" id="portrait" alt="photo of Jean-Louis Seize ..." /></div>
             <div>
                 <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
                     Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
