Modification index.html + style.css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     </header>
 
     <main>
+        <div class="topMain">
+            <img src="public/main.jpg" class="topPicture" alt="Photo d'architerture de J-L Seize">
+
+            <p id="text">"Mon travail se concentre sur la vie dans les mégapoles. Plusieurs de mes projets documentent l'architecture et la culture vernaculaire des métropoles. Aillant a grandi au canada, en europe et aux états-unis, étudié à uc berkeley et à l'école folkwang avec Otto Steinert à essen, allemagne. J'ai déménagé à hong kong en 1994 où j'ai pu travailler pendant 8 ans comme photographe contractuel pour le magazine stern. depuis 2001, je me concentre sur mes propres projets, dont beaucoup ont été publiés sous forme de livres."</p>
+        </div>
+            <div class="picturesGrid">  
+                <img src="public/picture1.jpg" class= bottomPicture alt="Exemple de photos de J-L Seize ">
+                <img src="public/picture2.jpg" class= bottomPicture alt="Exemple de photos de J-L Seize ">
+                <img src="public/picture3.jpg" class= bottomPicture alt="Exemple de photos de J-L Seize ">
+            </div>
+
 
     </main>
 
