--- a/about.html
+++ b/about.html
@@ -37,14 +37,14 @@
 
     <main>
         <div class="bloc-container">
-            <div><img src="public/portrait-pp.jpg" id="portrait" alt="photo of Jean-Louis Seize ..." /></div>
+            <div><img src="public/portrait-pp.jpg" id="portrait" alt="picture of Jean-Louis Seize" /></div>
             <div>
                 <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
                     Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
             </div>
-            <div><img src="public/architecture-1359707_1920.jpg" alt="photo de ..." /></div>
-            <div><img src="public/architecture-2083687_1920.jpg" alt="photo de ..." /></div>
-            <div><img src="public/architecture-1048092_1920.jpg" alt="photo de ..." /></div>
+            <div><img src="public/architecture-1359707_1920.jpg" alt="picture of building in New-York 5eme avenue - architect Michel Michel" /></div>
+            <div><img src="public/architecture-2083687_1920.jpg" alt="picture of building in New-York 5eme avenue - architect John John" /></div>
+            <div><img src="public/architecture-1048092_1920.jpg" alt="picture of building in Chicago 10eme avenue - architect Andrée Bernard" /></div>
         </div>
     </main>
 
