--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="about.css">
+    <link href="node_modules/lightbox2/dist/css/lightbox.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -41,9 +42,18 @@
                 <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
                     Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
             </div>
-            <div><img src="public/architecture-1359707_1920.jpg" class="imgAbout" alt="picture of building in New-York 5eme avenue - architect Michel Michel" /></div>
-            <div><img src="public/architecture-2083687_1920.jpg" class="imgAbout" alt="picture of building in New-York 5eme avenue - architect John John" /></div>
-            <div><img src="public/architecture-1048092_1920.jpg" class="imgAbout" alt="picture of building in Chicago 10eme avenue - architect Andrée Bernard" /></div>
+            <div>
+                <a href="public/architecture-2083687_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="New-York - Av. 8 - Architect John John">
+                    <img class="block" src="public/architecture-2083687_1920.jpg"" alt="Picture of building in New-York 8eme avenue - Architect John John"></a>
+            </div>
+            <div>
+                <a href="public/architecture-1048092_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Moon Av. - Architect John Michel">
+                    <img class="block" src="public/architecture-1048092_1920.jpg" alt="Picture of building in Boston Moon Avenue - Architect John Michel"></a>
+            </div>
+            <div>
+                <a href="public/architecture-1359707_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Kennedy Av. - Architect Michel Michel">
+                    <img class="block" src="public/architecture-1359707_1920.jpg" alt="Picture of building in Boston - avenue Kennedy - Architect Michel Michel"></a>
+            </div>
         </div>
     </main>
 
@@ -65,6 +75,7 @@
         </div>
 
     </footer>
+    <script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 
