--- a/about.html
+++ b/about.html
@@ -22,57 +22,57 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-    <li><a id="LinkPortfolio" href="portfolio.html">Portfolio</a></li>
-    <li><a id="LinkAbout" href="about.html" class="a_current">About</a></li>
-    <li><a id="LinkContact"  href="contact.html">Contact</a></li>
-</ul>
+        <li><a id="LinkPortfolio" href="portfolio.html">Portfolio</a></li>
+        <li><a id="LinkAbout" href="about.html" class="a_current">About</a></li>
+        <li><a id="LinkContact" href="contact.html">Contact</a></li>
+    </ul>
 </header>
 
 
 
 
 
-    <main>
-        <div class="bloc-container">
-            <div><img src="public/portrait-pp.jpg" id="portrait" alt="picture of Jean-Louis Seize" /></div>
-            <div class="text">
-                <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
-                    Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
-            </div>
-            <div>
-                <a href="public/architecture-2083687_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="New-York - Av. 8 - Architect John John">
+<main>
+    <div class="bloc-container">
+        <div><img src="public/portrait-pp.jpg" id="portrait" alt="picture of Jean-Louis Seize" /></div>
+        <div class="text">
+            <p>Isdem diebus Apollinaris Domitiani gener, paulo ante agens palatii Caesaris curam, ad Mesopotamiam missus a socero per militares numeros immodice scrutabatur, an quaedam altiora meditantis iam Galli secreta susceperint scripta, qui conpertis
+                Antiochiae gestis per minorem Armeniam lapsus Constantinopolim petit exindeque per protectores retractus artissime tenebatur.<br>Jean-Louis Seize</p>
+        </div>
+        <div>
+            <a href="public/architecture-2083687_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="New-York - Av. 8 - Architect John John">
                     <img class="block" src="public/architecture-2083687_1920.jpg"" alt="Picture of building in New-York 8eme avenue - Architect John John"></a>
-            </div>
-            <div>
-                <a href="public/architecture-1048092_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Moon Av. - Architect John Michel">
-                    <img class="block" src="public/architecture-1048092_1920.jpg" alt="Picture of building in Boston Moon Avenue - Architect John Michel"></a>
-            </div>
-            <div>
-                <a href="public/architecture-1359707_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Kennedy Av. - Architect Michel Michel">
-                    <img class="block" src="public/architecture-1359707_1920.jpg" alt="Picture of building in Boston - avenue Kennedy - Architect Michel Michel"></a>
-            </div>
         </div>
-    </main>
-
-
-
-
-
-    <footer>
-        <div class="iconcontainer">
-            <a href="https://www.facebook.com/" title="" id="" target="">
-                <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook" />
-            </a>
-            <a href="https://www.instagram.com/" title="" id="" target="">
-                <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram" />
-            </a>
-            <a href="https://twitter.com/" title="" id="" target="">
-                <img src="iconesfooter/pngwing.com-3.png" class="icons" alt="twitter" />
-            </a>
+        <div>
+            <a href="public/architecture-1048092_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Moon Av. - Architect John Michel">
+                <img class="block" src="public/architecture-1048092_1920.jpg" alt="Picture of building in Boston Moon Avenue - Architect John Michel"></a>
         </div>
+        <div>
+            <a href="public/architecture-1359707_1920.jpg" class="imgAbout" data-lightbox="architecture" data-title="Boston - Kennedy Av. - Architect Michel Michel">
+                <img class="block" src="public/architecture-1359707_1920.jpg" alt="Picture of building in Boston - avenue Kennedy - Architect Michel Michel"></a>
+        </div>
+    </div>
+</main>
 
-    </footer>
-    <script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+
+
+
+
+<footer>
+    <div class="iconcontainer">
+        <a href="https://www.facebook.com/" title="" id="" target="blank">
+            <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook" />
+        </a>
+        <a href="https://www.instagram.com/" title="" id="" target="blank">
+            <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram" />
+        </a>
+        <a href="https://twitter.com/" title="" id="" target="blank">
+            <img src="iconesfooter/pngwing.com-3.png" class="icons" alt="twitter" />
+        </a>
+    </div>
+
+</footer>
+<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 
