--- a/portfolio.html
+++ b/portfolio.html
@@ -84,13 +84,13 @@
 
     <footer>
         <div class="iconcontainer">
-            <a href="https://www.facebook.com/" title="" id="" target="blank">
+            <a href="https://www.facebook.com/"  target="blank">
                 <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook" />
             </a>
-            <a href="https://www.instagram.com/" title="" id="" target="blank">
+            <a href="https://www.instagram.com/"  target="blank">
                 <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram" />
             </a>
-            <a href="https://twitter.com/" title="" id="" target="blank">
+            <a href="https://twitter.com/"  target="blank">
                 <img src="iconesfooter/pngwing.com-3.png" class="icons" alt="twitter" />
             </a>
         </div>
