--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
         <main>
             <div class="topMain">
                 <img src="public/main.jpg" class="topPicture" alt="Photo d'architerture de J-L Seize">
-
-                <p id="text">"Photographier c’est mettre sur la même ligne de mire la tête, l’oeil et le coeur."</p>
             </div>
-
-            <div class="picturesGrid">
-            <img src="public/picture1.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
-            <img src="public/picture2.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
-            <img src="public/picture3.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
+                <p id="text">"Photographier c’est mettre sur la même ligne de mire la tête, l’oeil et le coeur."</p>
+            <div class="bottomMain">   
+                <div class="picturesGrid">
+                    <img src="public/picture1.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
+                    <img src="public/picture2.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
+                    <img src="public/picture3.jpg" class="bottomPicture" alt="Exemple de photos de J-L Seize ">
+                </div>
             </div>
         </main>
 
         <footer>
             <div class="iconcontainer">
-                <a href="https://www.facebook.com/" title="" id="" target="">
+                <a href="https://www.facebook.com/" title="" id="" target="blank">
                     <img src="iconesfooter/pngwing.com-5.png" class="icons" alt="facebook" />
                 </a>
-                <a href="https://www.instagram.com/" title="" id="" target="">
+                <a href="https://www.instagram.com/" title="" id="" target="blank">
                     <img src="iconesfooter/pngwing.com-6.png" class="icons" alt="instagram" />
                 </a>
-                <a href="https://twitter.com/" title="" id="" target="">
+                <a href="https://twitter.com/" title="" id="" target="blank">
                     <img src="iconesfooter/pngwing.com-3.png" class="icons" alt="twitter" />
                 </a>
             </div>
