--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="header.css">
-    <link href="node_modules/lightbox2/dist/css/lightbox.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -82,7 +82,7 @@
         </div>
 
     </footer>
-    <script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
