--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="about.css">
-    <link href="node_modules/lightbox2/dist/css/lightbox.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 </head>
 
 <header class="header">
@@ -72,7 +72,7 @@
     </div>
 
 </footer>
-<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 
